syntax = "proto3";

package api;

option go_package = "api/";

service Balance_ms {
  rpc AddBalance(AddBalanceRequest) returns (AddBalanceResponse) {}
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse) {}
  rpc Reserve(ReserveRequest) returns (ReserveResponse) {}
  rpc GetRevenue(GetRevenueRequest) returns (GetRevenueResponse) {}
}

message AddBalanceRequest {
  int64 id = 1;
  string money = 2;
}

message AddBalanceResponse {
  int32 status = 1;
}

message GetBalanceRequest {
  int64 id = 1;
}

message GetBalanceResponse {
  string balance = 1;
}

message ReserveRequest {
  int64 id = 1;
  string idService = 2;
  string idOrder = 3;
  string money = 4;
}

message ReserveResponse {
  int64 status = 1;
}

message GetRevenueRequest {

}

message GetRevenueResponse {
  int32 status = 1;
}